Developmental Aphas until further notice.

r7 Complete rewrite of the options table
r8 forgot to add LibAboutPanel, oops
r9 hopefully fixed the Blizzard Interface Addons Options Panel. moved the options into OnInit(). worked on the bars code
r10 many small changes. switched to libbars. more coding
r11 got rid of the unnecessary TestAddon in LibBars-1.0
r12 hopefully got localization working, which is subject to changes
r13 added random chat messages, updated localization, fixed some typos
r14 more codebase done. added LibDataBroker-1.1 support
r15 added a Lib, removed a folder, lots of codebase done
r16 copy/paste errors kill!
r17 frFR translations (in progress) from ckeurk and Xilbar
r18 more copy/paste errors
r19 more general fixes. added profile commands, a bit more localization
r20 updated frFR
r21 altered logic for stuff that gets enabled/disabled during combat, and out of combat
r22 more bugfixes, and a enUS translation change. Careful, frFR translators!
r23 Libs fixes by Phanx
r27 don't ask about r24 - r26. I'm dumb. anyway, bug fixes, added new profile, horizontal bar direction switching
r28 many whelps. handled! no fix for ticket #6 yet. more enUS localizations
r29 fixed tickets 6, 7, and hopefully 8. added deDE localization and borders, updated frFR localization